--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "debug": "^4.3.4",
     "express": "^4.19.2",
     "fill-range": "^7.0.1",
+    "fs-extra": "^11.2.0",
     "glob-parent": "^5.1.2",
     "has-flag": "^3.0.0",
     "ignore-by-default": "^1.0.1",
@@ -28,6 +29,7 @@
     "lru-cache": "^6.0.0",
     "minimatch": "^3.1.2",
     "ms": "^2.1.2",
+    "multer": "^1.4.5-lts.1",
     "nopt": "^1.0.10",
     "normalize-path": "^3.0.0",
     "picomatch": "^2.3.1",
