--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "concat-map": "^0.0.1",
     "debug": "^4.3.4",
     "express": "^4.19.2",
+    "express-handlebars": "^7.1.2",
     "fill-range": "^7.0.1",
     "fs-extra": "^11.2.0",
     "glob-parent": "^5.1.2",
@@ -37,6 +38,7 @@
     "readdirp": "^3.6.0",
     "semver": "^7.6.0",
     "simple-update-notifier": "^2.0.0",
+    "socket.io": "^4.7.5",
     "supports-color": "^5.5.0",
     "to-regex-range": "^5.0.1",
     "touch": "^3.1.0",
